--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,6 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<LINK href="/cflow/rsstyle.css" rel="stylesheet" type="text/css">
-	<link href="rsstyle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="site_container clearfix develops">
@@ -13,8 +12,7 @@
 	<div class="row">
 		<table class="topbar clearLink">
 			<tr><td>
-			<a href="/cflow" border="0"><img src="images/logo3764.png" alt="My World Flow Alpha" border="0"></a>Alpha
-				<span class="devConsole">Developer Console</span>
+			<a href="/cflow" border="0"><img src="images/logo3764.png" alt="My World Flow Alpha" border="0"></a>
 			</td><td class="onright">
 			<a href="reg.jsp">Sign up</a> | <a href="login.jsp">Sign in </a>
 		</td></tr></table>
@@ -23,8 +21,7 @@
 	<div class="row top20">
 		<table class="contentbody">
 			<tr><td>
-			<p><h1>这是一个云流程运行服务</h1></p>
-		<p>专门帮助 <B><font color=red>应用开发者</font></B> 快速实现业务应用中的强大协同功能。</p>
+			<p><h1>这是一个BPaaS业务流程服务</h1></p>
 	  <p>协同是行业应用的核心应用场景之一。工作需要在通过不同的人和计算机系统之间协同完成。云流程服务包括一个大规模、分布式流程引擎，一个面向开发者的开发者控制台(含流程设计器、测试器和监控器)，及一套流程开发工具, 含Restful API，及各语言SDK。</p>
 			<div class="top20 clearLink">
 				<p>如果您已有开发者账号，<a href="/cflow/login.jsp">请从这里登录</a>； 如果还没有，<a href="/cflow/reg.jsp">请从这里注册开发者账号</a></p>
@@ -44,7 +41,6 @@
 						<img src="images/hp_simple.png">
 						<div class="titles">
 							<h2>简单</h2>
-							<h3>云服务按需使用</h3>
 						</div>
 					</div>
 					<div class="text_area">
@@ -64,7 +60,6 @@
 						<img src="images/hp_flexible.png">
 						<div class="titles">
 							<h2>灵活</h2>
-							<h3>提供丰富API</h3>
 						</div>
 					</div>
 					<div class="text_area">
@@ -83,7 +78,6 @@
 						<img src="images/hp_scalable.png">
 						<div class="titles">
 							<h2>高伸缩</h2>
-							<h3>支持多方应用集成</h3>
 						</div>
 					</div>
 					<div class="text_area">
@@ -96,33 +90,7 @@
 		</a>
 		</div>
 	</div>
-    <div class="row">
-    <div class="grid_subfull">
-    与其它流程方案的比较
-    <table class="comparision">
-		<tr> <th>&nbsp;</th> <th class='ftitle'>流程套件</th> <th class='ftitle'>开发框架</th> <th class='ftitle'>AWS SWF</th> <th class='ftitle'>MyWorldFlow</th></tr>
-		<tr> <td class='column_header'>提供方式</td> <td>软件授权</td> <td>软件授权</td> <td class='fgood'>云服务</td> <td class='fgood'>云服务</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>需要安装</td> <td>是(复杂)</td> <td>是(复杂)</td> <td class='fgood'>否</td> <td class='fgood'>否</td> </tr>
-		<tr> <td class='column_header'>图形化流程设计器</td> <td class='fgood'>有</td> <td>无</td> <td>无</td> <td class='fgood'>有</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>图形化流程监控器</td> <td class='fgood'>有</td> <td>无</td> <td>无</td> <td class='fgood'>有</td> </tr>
-		<tr> <td class='column_header'>按模板自动路由</td> <td class='fgood'>支持</td> <td>无</td> <td>无</td> <td class='fgood'>缺省支持</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>高并发支持</td> <td>企业级应用规模</td> <td>需完全自行开发</td> <td class='fgood'>支持</td> <td class='fgood'>支持</td> </tr>
-		<tr> <td class='column_header'>对外服务API</td> <td>无</td> <td>无</td> <td class='fgood'>有</td> <td class='fgood'>有</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>任意开发语言</td> <td>不支持</td> <td>不支持</td> <td class='fgood'>支持</td> <td class='fgood'>支持</td> </tr>
-		<tr> <td class='column_header'>高级流程路由逻辑</td> <td class='fgood2'>部分支持</td> <td>开发者自行开发代码</td> <td>开发者自行开发代码</td> <td class='fgood'>支持</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>过程数据</td> <td>无</td> <td>无</td> <td>无</td> <td class='fgood'>自动携带</td> </tr>
-		<tr> <td class='column_header'>大规模流程支持</td> <td>否</td> <td>否</td> <td class='fgood'>支持</td> <td class='fgood'>支持</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>开发工作量</td> <td>大</td> <td>大</td> <td class='fgood'>小</td> <td class='fgood'>小</td> </tr>
-		<tr> <td class='column_header'>面向人分发任务</td> <td class='fgood'>支持</td> <td>无</td> <td>无</td> <td class='fgood'>缺省支持</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>面向计算机的任务</td> <td class='fgood'>支持</td> <td class='fgood'>支持</td> <td class='fgood'>支持</td> <td class='fgood'>支持</td> </tr>
-		<tr> <td class='column_header'>灵活性(流程运行时调整)</td> <td>不支持</td> <td>不支持</td> <td>不支持</td> <td class='fgood'>支持</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>灵活性(角色匹配)</td> <td class='fgood'>支持</td> <td class='fgood2'>需自行建立机制</td> <td class='fgood2'>需自行建立机制</td> <td class='fgood'>支持</td> </tr>
-		<tr> <td class='column_header'>第三方应用集成</td> <td>需编码实现</td> <td>需编码实现</td> <td>需编码实现</td> <td class='fgood'>标准支持</td> </tr>
-		<tr class='evenrow'> <td class='column_header'>高级流程功能(互斥、代理等)</td> <td>需编码实现</td> <td>需编码实现</td> <td>需编码实现</td> <td class='fgood'>标准支持</td> </tr>
-        <tr> <td class='column_header'>业务变化适应性</td> <td>改动量大</td> <td>改动量大</td> <td class='fgood'>改动量小</td> <td class='fgood'>改动量小</td> </tr>
-	</table>
-
-    </div>
+   
 	<div class="row">
 <div id="footer"><BR><BR>
       Copyright &#169; 2012 The MyWorldFlow.
